--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -96,12 +96,14 @@ http {
 <% if @server_tokens == 'on' -%>
   server_tokens on;
 <% end -%>
+<% if @types_hash_enable -%>
   types_hash_max_size <%= @types_hash_max_size %>;
   types_hash_bucket_size <%= @types_hash_bucket_size %>;
-
+<% end -%>
+<% if @names_hash_enable -%>
   server_names_hash_bucket_size <%= @names_hash_bucket_size %>;
   server_names_hash_max_size <%= @names_hash_max_size %>;
-
+<% end -%>
   keepalive_timeout   <%= @keepalive_timeout %>;
   keepalive_requests  <%= @keepalive_requests %>;
   client_body_timeout <%= @client_body_timeout %>;
